# geomech2

./: .gitignore  .wenv.json  README.md  __main__.py  database.db  package-lock.json  pyproject.toml  requirements.txt  setup.py  test.py
scripts/: fms_import_property_values_from_table.py
scripts/pm/: make_property_values_table.py
src/: config.py  ctx.py  custom_datetime.py  database.py  datetimeutil.py  delete_object.py  identity.py  version.py
src/bore_hole/ui/: choice.py
src/bore_hole/ui/page/: bore_hole_editor.py  editor.py  list.py
src/console/: core.py  database.py
src/console/ui/page/: script_editor.py
src/coord_system/ui/: choice.py
src/discharge/ui/page/: list.py  test_series_editor.py
src/document/: README.md
src/document/ui/: choice.py
src/document/ui/page/: __init__.py  document_editor.py  documents.py  editor.py  list.py
src/fms/ui/: fms_db_import.py
src/fms/ui/page/: __init__.py  (+8 more)
src/mine_object/ui/: choice.py
src/pm/ui/: db_import.py
src/station/ui/: choice.py
src/ui/: flatnotebook.py  icon.py  overlay.py  page.py  recently_used.py  task.py  validators.py
src/ui/_supplied_data/: delete.py  file.py  folder.py  supplied_data.py
src/ui/grid/: __init__.py  col_label_renderer.py  find.py  grid.py  row_label_renderer.py
src/ui/supplied_data/: __init__.py  delete.py  download.py  file.py  icon.py  open.py  supplied_data.py
src/ui/tree/: __init__.py  tree.py  tree_node.py
src/ui/windows/: login.py
src/update/: README.md  __init__.py  switch-version.c  update.py
src/update/ui/: process.py
src/web/map/: README.md
(+43 files in other folders)
