[project]
name = "geomech"
version = "1.0.0"
description = "Интерфейс базы данных геомеханики"
authors = [{name = "Горный институт КНЦ РАН", email = "goi@ksc.ru"},]

[dependencies]
python = "^3.10"
wxPython = "^4.2.1"
pony = "^0.7.16"
psycopg2 = "^2.9.9"
pyinstaller = "^6.0.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
skip-magic-trailing-comma = true